# yandia2

./: CONVERSATIONAL_DEMO_PLAN.md  HANDOFF.md  conversation_server.py  conversation_stream.py  install.sh  pyproject.toml  requirements.txt  simple_server.py  streaming_server.py  test_conversation.sh  test_conversation_stream.py  test_incremental_warmup.py  test_server.sh  test_streaming.py  test_streaming.sh
dia2/: __init__.py  assets.py  config.py  engine.py
dia2/audio/: __init__.py  codec.py  codec_hf.py  grid.py
dia2/core/: __init__.py  cache.py  precision.py
dia2/runtime/: __init__.py  audio_io.py  context.py  generator.py  logger.py  prefix_cache.py  script_parser.py  state_machine.py  voice_clone.py
