[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yandia2"
version = "0.1.0"
description = "Simple Dia2 TTS Server - minimal changes approach"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.8.0",
  "numpy>=2.1.0,<3.0",
  # Pin transformers to version compatible with moshi's huggingface-hub<0.34 requirement
  "transformers>=4.43.0,<4.44.0",
  "safetensors==0.5.3",
  "huggingface-hub>=0.24.7,<0.34",
  "sphn>=0.2.0",
  "soundfile>=0.12.1",
  "whisper-timestamped>=1.14.2",
  # Kyutai Mimi for native streaming (installed from git via tool.uv.sources)
  "moshi>=0.2.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "pyright>=1.1.385",
]

[tool.uv]
# Override moshi's torch<2.8 constraint to allow newer torch
# and sphn<0.2.0 constraint to allow newer sphn
override-dependencies = [
  "torch>=2.8.0",
  "sphn>=0.2.0",
]
package = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
# Install moshi from git to get latest version with relaxed dependencies
moshi = [
  { git = "https://github.com/kyutai-labs/moshi.git", subdirectory = "moshi" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.setuptools]
packages = ["dia2"]
